--- a/index.html
+++ b/index.html
@@ -7,14 +7,20 @@
 		<link rel="stylesheet" href="./assets/css/bootstrap.min.css" type="text/css" />
 		<link rel="stylesheet" href="./assets/css/dropzone.css" type="text/css" />
 		<link rel="stylesheet" href="./assets/css/sweetalert2.min.css" type="text/css" >
+		<link rel="stylesheet" href="./assets/css/app.css" type="text/css" >
 	</head>
 	<body>
 		<div class="container">
 			<div class="row">
-				<div class="col-12 pt-3">
-					<h1 class="text-center">Share app V 1.0.1</h1>
-					<h2 class="text-center">Seleccione o arrastre sus archivos al contenedor.</h2>
-					<p class="text-center">Tamaño maximo de archivo: <code>20mb</code>, Formato de archivo: <code>*.mp3</code> </p>
+				<div class="col-12">
+					<!-- <h1 class="text-center">Share app V 1.0.1</h1> -->
+					<div class="row justify-content-center mb-2">
+						<img src="./assets/img/logo.jpg" class="col-3 p-0 shadow">
+					</div>
+					<h5 class="text-center">Seleccione o arrastre sus archivos al contenedor.</h5>
+					<p class="text-center">
+						<small class="text-center">Tamaño maximo de archivo: <code>20mb</code>, Formato de archivo: <code>*.mp3</code> </small>
+					</p>
 				</div>
 			</div>
 			<div class="row">
