--- a/share/index.html
+++ b/share/index.html
@@ -12,11 +12,14 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-12 pt-3">
-					<h1 class="text-center">Share app V 1.0.1</h1>
-					<h2 class="text-center">Seleccione un archivo para compartir.</h2>
+					<!-- <h1 class="text-center">Share app V 1.0.1</h1> -->
+					<div class="row justify-content-center mb-2">
+						<img src="../assets/img/logo.jpg" class="col-3 p-0 shadow">
+					</div>
+					<h5 class="text-center">Seleccione un archivo para compartir.</h5>
 				</div>
 			</div>
-			<div class="row pt-3 border border-2 rounded-2" id="ContainerCards">
+			<div class="row pt-3 border border-2 border-dark rounded-2" id="ContainerCards" style="min-height: 200px;">
 			
 			</div>
 		</div>
